Release 1.0 (in development)
============================

* Support for domains has been added.  A domain is a collection of
  directives and roles that all describe objects belonging together,
  e.g. elements of a programming language.  Builtin domains are
  provided for Python and C objects.

* Added a JavaScript domain.

* Support for docutils 0.4 has been removed.

* Added Croatian translation, thanks to Bojan Mihelač.

* Added a manual page builder.

* Added support for source ordering of members in autodoc, with
  ``autodoc_member_order = 'bysource'``.

* In HTML output, inline roles now get a CSS class with their name,
  allowing styles to customize their appearance.  Domain-specific
  roles get two classes, ``domain`` and ``domain-rolename``.

* New more compact doc field syntax is now recognized:
  ``:param type name: description``.

* Added a "nitpicky" mode that emits warnings for all missing
  references.  It is activated by the ``-n`` command-line switch
  or the ``nitpicky`` config value.

* Added the ``viewcode`` extension.

* Added ``html-collect-pages`` event.

* Sphinx now requires Jinja2 version 2.2 or greater.

* Added Turkish translation, thanks to Firat Ozgul.

* Added ``needs_sphinx`` config value and ``Sphinx.require_sphinx``
  application API function.

* Added single-file HTML builder.

* Added ``autodoc_default_flags`` config value, which can be used
  to select default flags for all autodoc directives.

* Added ``tab-width`` option to ``literalinclude`` directive.

* Added ``rst_prolog`` config value.

* Added ``html_secnumber_suffix`` config value to control section
  numbering format.

* Added ``html_compact_lists`` config value to control docutils'
  compact lists feature.

* The ``html_sidebars`` config value can now contain patterns as
  keys, and the values can be lists that explicitly select which
  sidebar templates should be rendered.  That means that the builtin
  sidebar contents can be included only selectively.
